[package]
name = "ingics"
version = "0.1.0"
edition = "2021"
authors = ["Philipp Marmet  <fujexo@c0d3.ch>"]
description = "This crate provides a parser for various Ingics iBS Sensors."
readme = "README.md"
repository = "https://github.com/fujexo/rs-ingics"
license-file = "LICENSE.txt"
keywords = ["sensor", "parser", "Ingics"]
categories = ["parser-implementations"]

[features]
default = []
full = ["influxdb"]
influxdb = []

[dependencies]
influxdb = { version = "0.5.2", features = ["derive"] }
chrono = "0.4.22"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.0"
futures = "0.3"
bluer = { version = "0.15.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
influxdb = "0.5.2"
