[package]
name = "ingics"
version = "0.1.2"
edition = "2021"
authors = ["Philipp Marmet  <fujexo@c0d3.ch>"]
description = "This crate provides a parser for various Ingics iBS Sensors."
readme = "README.md"
repository = "https://github.com/fujexo/rs-ingics"
license-file = "LICENSE.txt"
keywords = ["sensor", "parser", "Ingics"]
categories = ["parser-implementations"]

[features]
default = []
full = ["influxdb"]
influxdb = []

[dependencies]
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.38"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
futures = "0.3"
bluer = { version = "0.17.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
influxdb = "0.7.2"
